adr-003: adiciona PoC Panama + comparativo detalhado JNA/JNI/Panama
- Tabela comparativa com latência, debug, GraalVM, maturidade
- PoC planejada com métricas: startup, latência, throughput
- Critério de decisão baseado em dados
- Quando cada abordagem é ideal